<resources>
    <string name="app_name">클래스메이트</string>

    <string name="USW">수원대학교</string>
    <string name="no_lecture_registered">등록된 강의가 없습니다</string>
    <string name="check_task">과제가 있습니다! 확인하세요</string>
    <string name="class_over">수업이 끝났습니다!</string>
    <string name="class_over_register_for_task">수업이 끝났습니다! 과제를 등록하세요</string>

    <string name="close_button">closeButton</string>
    <string name="timetable">시간표</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">홈</string>
    <string name="title_todo">과제</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">알림</string>
    <string name="title_timetable">시간표</string>
    <string name="title_more">더보기</string>
    <string name="setting">설정</string>
    <string name="class_title">과목명</string>
    <string name="class_title_bold"><b>과목명</b></string>
    <string name="search">검색</string>

    <!--    timetableView 관련 -->
    <string-array name="days">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="start_times">
        <item>1교시 (09:30~)</item>
        <item>2교시 (10:30~)</item>
        <item>3교시 (11:30~)</item>
        <item>4교시 (12:30~)</item>
        <item>5교시 (13:30~)</item>
        <item>6교시 (14:30~)</item>
        <item>7교시 (15:30~)</item>
        <item>8교시 (16:30~)</item>
        <item>9교시 (17:30~)</item>
        <item>10교시 (18:30~)</item>
        <item>11교시 (19:30~)</item>
        <item>12교시 (20:30~)</item>
        <item>13교시 (21:30~)</item>
        <item>14교시 (22:30~)</item>
    </string-array>

    <string-array name="start_clock">
        <item>09:30</item>
        <item>10:30</item>
        <item>11:30</item>
        <item>12:30</item>
        <item>13:30</item>
        <item>14:30</item>
        <item>15:30</item>
        <item>16:30</item>
        <item>17:30</item>
        <item>18:30</item>
        <item>19:30</item>
        <item>20:30</item>
        <item>21:30</item>
        <item>22:30</item>
    </string-array>

    <string-array name="end_clock">
        <item>10:20</item>
        <item>11:20</item>
        <item>12:20</item>
        <item>13:20</item>
        <item>14:20</item>
        <item>15:20</item>
        <item>16:20</item>
        <item>17:20</item>
        <item>18:20</item>
        <item>19:20</item>
        <item>20:20</item>
        <item>21:20</item>
        <item>22:20</item>
        <item>23:20</item>
    </string-array>

    <string-array name="end_times">
        <item>1교시 (~10:20)</item>
        <item>2교시 (~11:20)</item>
        <item>3교시 (~12:20)</item>
        <item>4교시 (~13:20)</item>
        <item>5교시 (~14:20)</item>
        <item>6교시 (~15:20)</item>
        <item>7교시 (~16:20)</item>
        <item>8교시 (~17:20)</item>
        <item>9교시 (~18:20)</item>
        <item>10교시 (~19:20)</item>
        <item>11교시 (~20:20)</item>
        <item>12교시 (~21:20)</item>
        <item>13교시 (~22:20)</item>
        <item>14교시 (~23:20)</item>
    </string-array>

    <string-array name="setting_minutes">
        <item>10분 전</item>
        <item>20분 전</item>
        <item>30분 전</item>
        <item>40분 전</item>
        <item>50분 전</item>
        <item>1시간 전</item>
    </string-array>

    <string name="cancel">취소</string>
    <string name="add">추가</string>
    <string name="ok">완료</string>
    <string name="professorName">교수명</string>
    <string name="action_settings">Settings</string>
    <string name="place">장소</string>
    <string name="choose_day_of_week">요일을 선택하세요</string>
    <string name="day_of_week_choice">요일 선택</string>
    <string name="start_time_choice">시작 시간 선택</string>
    <string name="choose_start_time">시작 교시(시간) 선택을 선택하세요</string>
    <string name="end_time_choice">종료 시간 선택</string>
    <string name="choose_end_time">종료 교시(시간) 선택을 선택하세요</string>
    <string name="delete">삭제</string>
    <string name="app_name_en">classmate</string>
    <string name="alarm_on">알람 켜기</string>
    <string name="address_blog">latte-is-horse.tistory.com</string>
    <string name="address_email">pmb0836+classmate@gmail.com</string>
    <string name="address_github">github.com/mangbaam</string>
    <string name="developer_information">개발자 정보</string>
    <string name="edit_button_description">button to edit minute</string>

    <string name="mit_license_min_timetable">
        MIT License\n\n
        Copyright © 2019 Junghyun Park
\n\n
Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:
\n\n
The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.
\n\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

    </string>

    <string name="apache_license_nice_spinner">
        Copyright © 2015 Angelo Marchesin.
    \n\n
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    \n\n
    http://www.apache.org/licenses/LICENSE-2.0
    \n\n
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
    </string>

    <string name="mit_license_swipe_reveal_layout">
        The MIT License (MIT)
\n\n
 Copyright © 2016 Chau Thai
\n\n
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
 furnished to do so, subject to the following conditions:
\n\n
 The above copyright notice and this permission notice shall be included in all
 copies or substantial portions of the Software.
\n\n
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.\n
    </string>

    <string name="license_mintimetable">▶ MinTimetable\n(github.com/islandparadise14/MinTimetable)</string>
    <string name="license_nice_spinner">▶ nice-spinner\n(github.com/arcadefire/nice-spinner)</string>
    <string name="license_swipe_reveal_layout">▶ SwipeRevealLayout\n(github.com/chthai64/SwipeRevealLayout)</string>

    <string name="introduce_myself">
        안녕하세요 수원대학교 정보보호학과 박명범입니다\n\n
        문의 사항이 있다면 밑에 이메일 버튼을 눌러 저에게 이메일을 보낼 수 있어요!\n\n
        저에 대해 더 궁금하다면 블로그를 방문해주세요\n\n
        이 앱의 소스 코드와 개발 과정은 깃허브에서 확인할 수 있습니다.\n\n
    </string>
    <string name="all">전체</string>
    <string name="menu_button">메뉴 버튼</string>
    <string name="add_todo_button">과제 추가 버튼</string>
    <string name="todo_detail_content">과제 세부 내용</string>
    <string name="no_deadline">마감 날짜 없음</string>
    <string name="todo_title">과제 제목</string>
    <string name="input_todo">과제 입력</string>
    <string name="priority_high">우선순위 높음</string>
    <string name="priority_mid">우선순위 보통</string>
    <string name="priority_low">우선순위 낮음 (기한 없음)</string>
    <string name="priority_complete">완료됨</string>
    <string name="load_more">더 보기</string>
    <string name="add_lecture_button">시간표 추가 버튼</string>
    <string name="all_day">하루 종일</string>
    <string name="nothing">Nothing…</string>
    <string name="edit">수정</string>
    <string name="complete">완료</string>
    <string name="deadline">마감일</string>
    <string name="priority">우선 순위</string>
    <string name="sorting_order">정렬 순서</string>
    <string name="sort_by">정렬 기준</string>
    <string name="ascend">오름차순</string>
    <string name="descend">내림차순</string>
    <string name="apply">적용</string>
    <string name="display_in_list">목록에 표시</string>
</resources>