<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.todo.AddTodoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/input_todo"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            android:text="@string/add"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <EditText
        android:id="@+id/todoTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/todo_title"
        android:textStyle="bold"
        android:inputType="text"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/todoPriorityButton"
            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@color/priority_low" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/todoCategorySpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/todoDeadlineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_deadline"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/todoContentEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/todo_detail_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:gravity="top"
        android:background="@drawable/rectangle_border"
        android:inputType="textLongMessage"
        android:importantForAutofill="no" />


</LinearLayout>